# accounting-bot

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  transaction.rs
src/cmds/: transaction.rs
src/cmds/transaction/: templates.rs  tests.rs
src/transaction/: message.rs  posting.rs  templates.rs  tests.rs
src/transaction/message/: tests.rs
