[package]
name = "accounting-bot"
version = "0.1.0"
authors = ["Robert Klotzner <robert.klotzner@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.2.1"
chrono = "0.4.10"

[dev-dependencies]
indoc = "0.3.4"
