[package]
name = "accounting-bot"
version = "0.1.0"
authors = ["Robert Klotzner <robert.klotzner@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
futures = "0.1.28"
rust_decimal = "1.2.1"
tbot = "0.5.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
indoc = "0.3.4"
